--- a/style.css
+++ b/style.css
@@ -3,3 +3,29 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  text-align:center;
+}
+
+img{
+  display: block;
+  margin-left: auto;
+  margin-right:auto;
+}
+
+a {
+  text-align:center;/*fix*/
+  padding:10px;
+  background:#999999
+}
+
+figcaption {
+  font-size-adjust:smaller;
+  text-align:center;
+}
+
+featured-property > p {
+  width:800px;
+  text-align:center;
+}
