--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ figcaption {
   text-align:center;
 }
 
-featured-property > p {
+featured-property p {
   width:800px;
   margin-left:auto;
   margin-right:auto;
