Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -28,12 +28,12 @@ figcaption {
   text-align:center;
 }
 
-featured-property > p {
+featured-property p {
   width:800px;
   margin-left:auto;
   margin-right:auto;
 }
 
 footer{
-  
+
 }
