--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ figcaption {
 }
 
 featured-property p {
-  /*width:800px;
+  width:800px;
   margin-left:auto;
-  margin-right:auto;*/
+  margin-right:auto;
 }
 
 footer{
